[package]
name = "pg_uuidv7"
version = "0.1.0"
edition = "2021"
description = "A Postgres extension to generate v7 UUIDs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/craigpastro/pg_uuidv7"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_uuidv7"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg17"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg_test = []

[dependencies]
pgrx = "0.14.0"
thiserror = "2.0"
uuid = { version = "1.17", features = ["std", "v7"] }

[dev-dependencies]
pgrx-tests = "0.14.0"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
